--- a/media/css/themes/transparency.css
+++ b/media/css/themes/transparency.css
@@ -1,6 +1,6 @@
 /**
  * @version 2.0.0
- * @package Perfect Easy & Powerful Contact Form
+ * @package Gator Forms
  * @copyright (C) 2018 Gator Forms, All rights reserved. https://gatorforms.com
  * @license GNU/GPL http://www.gnu.org/licenses/gpl-3.0.html
  * @author Emil Lament
