--- a/media/css/layout.css
+++ b/media/css/layout.css
@@ -528,9 +528,9 @@ div.pweb-modal *,
     box-shadow: 1px -3px 3px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(255,255,255,0.2) inset;
 }
 .pwebcontact.pweb-vertical.pweb-left .pwebcontact_toggler.pweb-shadow {
-    -moz-box-shadow: 3px -1px 3px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(255,255,255,0.2) inset;
-    -webkit-box-shadow: 3px -1px 3px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(255,255,255,0.2) inset;
-    box-shadow: 3px -1px 3px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(255,255,255,0.2) inset;
+    -moz-box-shadow: 0 0 70px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0 0 70px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 70px rgba(0, 0, 0, 0.5);
 }
 .pwebcontact.pweb-vertical.pweb-right .pwebcontact_toggler.pweb-shadow {
     -moz-box-shadow: -3px -1px 3px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(255,255,255,0.2) inset;
