General improvements for themes

--- a/media/css/layout.css
+++ b/media/css/layout.css
@@ -503,9 +503,9 @@ div.pweb-modal *,
 }
 
 .pwebcontact_toggler.pweb-shadow {
-    -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.5), 0 1px 2px rgba(255,255,255,0.2) inset;
-    -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.5), 0 1px 2px rgba(255,255,255,0.2) inset;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.5), 0 1px 2px rgba(255,255,255,0.2) inset;
+    -moz-box-shadow: 0 0 70px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0 0 70px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 70px rgba(0, 0, 0, 0.5);
 }
 .pwebcontact.pweb-offset-left.pweb-top .pwebcontact_toggler.pweb-shadow {
     -moz-box-shadow: -1px 3px 3px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(255,255,255,0.2) inset;
@@ -705,6 +705,11 @@ form.pwebcontact-form .pweb-msg-before {
     margin-bottom: 20px;
 }
 form.pwebcontact-form .pweb-msg-after {
+    /*margin-top: 20px;*/
+}
+form.pwebcontact-form .pweb-msg-after > .pweb-success,
+form.pwebcontact-form .pweb-msg-after > .pweb-error,
+form.pwebcontact-form .pweb-msg-after > .pweb-progress {
     margin-top: 20px;
 }
 form.pwebcontact-form .pweb-msg-button,
@@ -920,6 +925,9 @@ form.pwebcontact-form label.invalid a {
  */
 .pweb-labels-inline form.pwebcontact-form .pweb-field-container {
     margin-bottom: 12px;
+}
+.pweb-labels-inline form.pwebcontact-form .pweb-row:last-of-type .pweb-field-container {
+    margin-bottom: 0;
 }
 .pweb-labels-inline form.pwebcontact-form .pweb-label {
     clear: both;
