--- a/media/css/themes/twenty-sixteen.css
+++ b/media/css/themes/twenty-sixteen.css
@@ -35,16 +35,16 @@ form.pwebcontact-form textarea:focus,
 form.pwebcontact-form input.pweb-input,
 form.pwebcontact-form select,
 form.pwebcontact-form textarea,
-.pweb-shadow form.pwebcontact-form button,
-.pweb-shadow form.pwebcontact-form .btn,
-.pweb-shadow form.pwebcontact-form .pweb-field-shadow {
+form.pwebcontact-form button,
+form.pwebcontact-form .btn,
+form.pwebcontact-form .pweb-field-shadow {
     box-shadow: none !important;
     -moz-box-shadow: none !important;
     -webkit-box-shadow: none !important;
 }
 
-.pweb-shadow form.pwebcontact-form button,
-.pweb-shadow form.pwebcontact-form .btn {
+form.pwebcontact-form button,
+form.pwebcontact-form .btn {
     padding: 0.5em 0.5em;
     font-family: Noto Sans, sans-serif !important;
     text-shadow: none !important;
@@ -52,16 +52,16 @@ form.pwebcontact-form textarea,
     font-weight: 700;
 }
 
-.pweb-shadow form.pwebcontact-form button[type="submit"].btn {
+form.pwebcontact-form button[type="submit"].btn {
     padding: 0.7917em 1.5em;
 }
 
-.pweb-shadow form.pwebcontact-form button:hover,
-.pweb-shadow form.pwebcontact-form button:focus,
-.pweb-shadow form.pwebcontact-form button:active,
-.pweb-shadow form.pwebcontact-form .btn:hover,
-.pweb-shadow form.pwebcontact-form .btn:focus,
-.pweb-shadow form.pwebcontact-form .btn:active {
+form.pwebcontact-form button:hover,
+form.pwebcontact-form button:focus,
+form.pwebcontact-form button:active,
+form.pwebcontact-form .btn:hover,
+form.pwebcontact-form .btn:focus,
+form.pwebcontact-form .btn:active {
     background: #707070 !important;
     border-color: #707070 !important;
 }
@@ -77,22 +77,34 @@ form.pwebcontact-form input.pweb-radio {
     float: left;
 }
 
-.pwebcontact.pweb-slidebox.pweb-shadow .pwebcontact-container {
-    -moz-box-shadow: 0 0 70px rgba(0, 0, 0, 0.5);
-    -webkit-box-shadow: 0 0 70px rgba(0, 0, 0, 0.5);
-    box-shadow: 0 0 70px rgba(0, 0, 0, 0.5);
-}
-
 .pweb-slidebox .pwebcontact-container,
 .pweb-modal .pwebcontact-container,
 .pweb-accordion-boxed .pwebcontact-container {
     border: none;
 }
 
+/* Slide */
+
+.pwebcontact.pweb-slidebox.pweb-vertical.pweb-left .pwebcontact_toggler {
+    top: 30px;
+}
+
 .pwebcontact.pweb-slidebox .pwebcontact-container {
-    padding: 30px 30px 10px;
+    padding: 30px;
+}
+
+.pwebcontact.pweb-slidebox.pweb-shadow .pwebcontact-container {
+    -moz-box-shadow: 0 0 70px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0 0 70px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 70px rgba(0, 0, 0, 0.5);
 }
 
 .pwebcontact.pweb-slidebox.pweb-left.pweb-vertical .pwebcontact-container {
     padding-left: 70px;
+}
+
+/* Accordion */
+
+.pweb-accordion.pweb-accordion-boxed .pwebcontact-container {
+    padding: 30px;
 }
