--- a/media/css/themes/twenty-sixteen.css
+++ b/media/css/themes/twenty-sixteen.css
@@ -50,9 +50,6 @@ form.pwebcontact-form .btn {
     text-shadow: none !important;
     text-transform: uppercase;
     font-weight: 700;
-    border-radius: 2px !important;
-    -moz-border-radius: 2px !important;
-    -webkit-border-radius: 2px !important;
 }
 
 form.pwebcontact-form button[type="submit"].btn {
@@ -89,10 +86,12 @@ form.pwebcontact-form input.pweb-radio {
 .pweb-radius form.pwebcontact-form input.pweb-input,
 .pweb-radius form.pwebcontact-form select,
 .pweb-radius form.pwebcontact-form textarea,
-.pweb-radius form.pwebcontact-form .pweb-field-shadow {
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
+.pweb-radius form.pwebcontact-form .pweb-field-shadow,
+.pweb-radius form.pwebcontact-form button,
+.pweb-radius form.pwebcontact-form .btn {
+    border-radius: 2px !important;
+    -moz-border-radius: 2px !important;
+    -webkit-border-radius: 2px !important;
 }
 
 /* Toggler rounded */
