--- a/media/css/admin.css
+++ b/media/css/admin.css
@@ -27,6 +27,20 @@
     border-color: #527320;
 }
 
+.button.pweb-buy:focus {
+    box-shadow: 0 1px 0 #527320, 0 0 2px 1px #527320;
+    -moz-box-shadow: 0 1px 0 #527320, 0 0 2px 1px #527320;
+    -webkit-box-shadow: 0 1px 0 #527320, 0 0 2px 1px #527320;
+    -o-box-shadow: 0 1px 0 #527320, 0 0 2px 1px #527320;
+}
+
+.button.pweb-buy:active {
+    box-shadow: inset 0 2px 0 #527320;
+    -moz-box-shadow: inset 0 2px 0 #527320;
+    -webkit-box-shadow: inset 0 2px 0 #527320;
+    -o-box-shadow: inset 0 2px 0 #527320;
+}
+
 .gf-misc-actions-container {
      padding: 10px;
 }
